client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap');

* {
  box-sizing: border-box
}

body {
  padding: 0;
  margin: 0;
  background-color: #dadada;
}

.layout-container {
  font-family: 'Raleway', sans-serif;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

ol, ul {
  padding: 0
}

li {
  list-style: none
}

.bold-text {
  font-weight: 700
}

.semi-bold-text {
  font-weight: 500
}

.main-header {
  box-shadow: 0 2px 15px 2px rgb(70, 68, 68)
}

.header-brand {
  display: flex;
  align-items: center;
  justify-content: center
}

.header-img {
  width: 5rem;
  padding: 5px
}

.header-brand h1 {
  font-size: 2.5rem;
  margin: 0
}

.main-header > nav a {
  margin: 0 3vw 
}

.navbar-collapse {
  justify-content: center
}

.body-title {
  font-size: clamp(1.7rem, 4.5vw, 3rem);
  margin: 4vh 0
}

.db-tutor-cards {
  max-width: 80vw;
  margin-bottom: 7vh
}

.card-subtitle {
  letter-spacing: .3px
}

.signup-form, .login-form {
  max-width: 60vw;
  margin: 5vh auto;
}

.form-label {
  margin: 0;
  font-size: clamp(18px, 1.2vw, 30px) 
}

.logout-btn {
  background-color: #dadada
}


.login-error {
  margin-top: 1.5vh;
  color: rgb(235, 75, 75);
  font-size: 1.2rem
}

button {
  border: none;
  padding: 0
} 

footer {
  margin-top: auto;
  background-color: rgb(109, 105, 105)
}

.footer-a {
  color: black;
  text-decoration: none
}

.footer-a:hover {
  color: white
}

.tutor-card-headings{
  margin-top: 2vh
}

.selected-tutor-card {
  padding: 0
}

.scheduler {
  background-color: grey;
  padding: 1.7rem 1rem;
  border-radius: 2%;
  max-width: 80vw
}

.schedule-message {
  min-width: 100%
}

.schedulertextarea {
  border-radius: 2%;
  min-width: 100%;
  resize: none
}

.tutorarticle {
  height: 30rem;
  border-radius: 2%;
}

.footer-div {
  font-size: .9rem
}

.footer-links {
  padding: 0 4vw
}

.footer-links:nth-child(2) {
  border-right: 2px solid white;
  border-left: 2px solid white
}

.footer-links:nth-child(3) {
  border-right: 2px solid white;
}

